deployment/k8s/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: fastapi-ecommerce
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - auth.fastapi-ecommerce.com
      secretName: echo-tls
    - hosts:
        - store.fastapi-ecommerce.com
      secretName: echo-tls
  rules:
    - host: auth.fastapi-ecommerce.com
      http:
        paths:
          - pathType: Prefix
            path: "/api/v1/"
            backend:
              service:
                name: auth-svc
                port:
                  number: 8081
    - host: store.fastapi-ecommerce.com
      http:
        paths:
          - pathType: Prefix
            path: "/api/v1/"
            backend:
              service:
                name: store-svc
                port:
                  number: 8082
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "fastapi-ecommerce.com"
  labels:
    helm.sh/chart: ingress-nginx-4.0.15
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 1.2.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
