deployment/k8s/k8s-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: fastapi-ecommerce
  annotations:
    cert-manager.io/issuer: "letsencrypt"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - auth.fastapi-ecommerce.com
      - store.fastapi-ecommerce.com
      secretName: letsencrypt-staging
  rules:
    - host: auth.fastapi-ecommerce.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: auth-svc
              port:
                number: 8081
    - host: store.fastapi-ecommerce.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store-svc
                port:
                  number: 8082
